--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 
 body {
     margin-top: 100px;
-    background-color: #222;
+    background-color: white;
+    overflow-x: hidden;
 }
 
 @media(min-width:768px) {
@@ -118,14 +119,16 @@ ul.alert-dropdown {
         top: 51px;
         left: 225px;
         width: 225px;
+        height:72%;
         margin-left: -225px;
         border: none;
         border-radius: 0;
         overflow-y: auto;
         background-color: #222;
         bottom: 0;
-        overflow-x: hidden;
+        overflow: hidden;
         padding-bottom: 40px;
+
     }
 
     .side-nav>li>a {
@@ -228,4 +231,42 @@ ul.alert-dropdown {
 textarea{
   width:100%;
   height:40vh;
+}
+.activa{
+  background-color:#387A9B;
+}
+.table1 {
+    border-collapse: collapse;
+    margin:0 auto;
+    width: 90%;
+}
+
+.row1, .col1 {
+    padding: 3pt;
+    text-align: left;
+    font-size: 20pt;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+.table2, .row2, .col2 {
+    border-right: 1px solid #ddd;
+    text-align: left;
+}
+
+.table2 {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+ .col2 {
+    padding-right: 5pt;
+    padding-left:5pt;
 }
